--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
-    "react": "^16"
+    "react": "^16||^17"
   },
   "devDependencies": {
-    "@types/react": "^16",
-    "react": "^16",
-    "typescript": "^4.3.2"
+    "@types/react": "^17",
+    "react": "^17",
+    "typescript": "^4"
   },
   "author": "Tyler Wolff <tylerwolff@gmail.com> (https://github.com/tylerwolff)",
   "license": "MIT",
