--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-use-cookie",
+  "name": "@neonaut/use-cookie",
   "version": "1.2.1",
   "description": "A React hook for managing cookies with no dependencies.",
   "keywords": [
