--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neonaut/use-cookie",
-  "version": "1.2.1",
+  "version": "2.0.0-alpha.0",
   "description": "A React hook for managing cookies with no dependencies.",
   "keywords": [
     "cookies",
